# autonomous-code-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/autonomous_code_assistant/: __init__.py  cli.py  core.py  exceptions.py
src/autonomous_code_assistant/file_operations/: __init__.py  analyzer.py  backup.py  reader.py  writer.py
src/autonomous_code_assistant/providers/: __init__.py  base.py  factory.py  openai.py
tests/: test_assistant.py
